<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.recipedetail.RecipeDetailActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/steps_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <FrameLayout
        android:id="@+id/step_navigation"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        android:elevation="8dp">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/prev_step_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/previous"/>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/next_step_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/next"/>

    </FrameLayout>

</LinearLayout>
