...
                android:layout_marginStart="@dimen/keyline_margin"
                android:layout_marginEnd="@dimen/keyline_margin"
                tools:text="Step 1 (out of 13)"/>

            <TextView
                style="@style/TextAppearance.AppCompat.Small"
                android:id="@+id/step_short_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/textColorSecondary"
                android:layout_marginStart="@dimen/keyline_margin"
                android:layout_marginEnd="@dimen/keyline_margin"
...
